--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "^6.20.0",
+    "@babel/runtime": "^7.1.5",
+    "bcrypt": "^3.0.2",
     "meteor-node-stubs": "~0.2.4"
   }
 }
